load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "reader.go",
        "readseeker.go",
        "writer.go",
    ],
    importpath = "github.com/NVIDIA/vdisc/pkg/countio",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["readseeker_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
