load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "auth.go",
        "dns.go",
        "metrics.go",
        "range.go",
        "retry.go",
    ],
    importpath = "github.com/NVIDIA/vdisc/pkg/httputil",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cenkalti_backoff//:go_default_library",
        "@com_github_lukealonso_dnscache//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
