load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "auth.go",
        "metrics.go",
        "range.go",
        "retry.go",
        "rr.go",
    ],
    importpath = "github.com/NVIDIA/vdisc/pkg/httputil",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cenkalti_backoff//:go_default_library",
        "@com_github_hashicorp_golang_lru//simplelru:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "net_test.go",
        "rr_test.go",
    ],
    embed = [":go_default_library"],
)
