load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "dir.go",
        "file.go",
        "isofuse.go",
    ],
    importpath = "github.com/NVIDIA/vdisc/pkg/isofuse",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/iso9660:go_default_library",
        "//pkg/storage:go_default_library",
        "//pkg/vdisc:go_default_library",
        "@org_bazil_fuse//:go_default_library",
        "@org_bazil_fuse//fs:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
