load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cache.go",
        "dir.go",
        "file.go",
        "isofuse.go",
    ],
    importpath = "github.com/NVIDIA/vdisc/pkg/isofuse",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/iso9660:go_default_library",
        "//pkg/safecast:go_default_library",
        "//pkg/storage:go_default_library",
        "//pkg/vdisc:go_default_library",
        "@com_github_dgraph_io_ristretto//:go_default_library",
        "@com_github_jacobsa_fuse//:go_default_library",
        "@com_github_jacobsa_fuse//fuseops:go_default_library",
        "@com_github_jacobsa_fuse//fuseutil:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
    ],
)
