load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "concat.go",
        "storage.go",
    ],
    importpath = "github.com/NVIDIA/vdisc/pkg/storage",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_btree//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["concat_test.go"],
    embed = [":go_default_library"],
    deps = ["//pkg/storage/data:go_default_library"],
)
