load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "concat.go",
        "storage.go",
    ],
    importpath = "github.com/NVIDIA/vdisc/pkg/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/interval:go_default_library",
        "//pkg/storage/data:go_default_library",
        "//pkg/storage/driver:go_default_library",
        "//pkg/storage/file:go_default_library",
        "//pkg/storage/http:go_default_library",
        "//pkg/storage/s3:go_default_library",
        "//pkg/storage/swift:go_default_library",
        "//pkg/storage/zero:go_default_library",
        "@com_github_google_btree//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["concat_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/storage/mock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
    ],
)
