load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "buffer.go",
        "builder.go",
        "cache.go",
        "extent.go",
        "loader.go",
        "trie.go",
    ],
    importpath = "github.com/NVIDIA/vdisc/pkg/vdisc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/iso9660:go_default_library",
        "//pkg/safecast:go_default_library",
        "//pkg/storage:go_default_library",
        "//pkg/vdisc/types:go_default_library",
        "//pkg/vdisc/types/v1:go_default_library",
        "@com_github_badgerodon_collections//queue:go_default_library",
        "@com_github_hashicorp_golang_lru//simplelru:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_zombiezen_go_capnproto2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["cache_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/storage:go_default_library",
        "//pkg/storage/data:go_default_library",
    ],
)
