load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "builder.go",
        "extent.go",
        "loader.go",
        "trie.go",
    ],
    importpath = "github.com/NVIDIA/vdisc/pkg/vdisc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/caching:go_default_library",
        "//pkg/iso9660:go_default_library",
        "//pkg/safecast:go_default_library",
        "//pkg/storage:go_default_library",
        "//pkg/vdisc/types:go_default_library",
        "//pkg/vdisc/types/v1:go_default_library",
        "@com_github_badgerodon_collections//queue:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_zombiezen_go_capnproto2//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
