load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "data.go",
        "finfo.go",
        "object.go",
        "writer.go",
    ],
    importpath = "github.com/NVIDIA/vdisc/pkg/storage/data",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/storage:go_default_library",
        "@com_github_vincent_petithory_dataurl//:go_default_library",
    ],
)
