load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "file.go",
        "object.go",
        "writer.go",
    ],
    importpath = "github.com/NVIDIA/vdisc/pkg/storage/file",
    visibility = ["//visibility:public"],
    deps = ["//pkg/storage/driver:go_default_library"],
)
