load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "context.go",
        "delete.go",
        "http.go",
        "object.go",
    ],
    importpath = "github.com/NVIDIA/vdisc/pkg/storage/http",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/httputil:go_default_library",
        "//pkg/safecast:go_default_library",
        "//pkg/storage:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
