load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "anonymous_object.go",
        "commit_info.go",
        "driver.go",
        "object.go",
        "object_writer.go",
    ],
    importpath = "github.com/NVIDIA/vdisc/pkg/storage/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/storage/driver:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
    ],
)
