load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "AnonymousObject.go",
        "CommitInfo.go",
        "ComprehensiveDriver.go",
        "Creator.go",
        "Driver.go",
        "FileInfo.go",
        "Locker.go",
        "Object.go",
        "ObjectWriter.go",
        "Readdirer.go",
        "Remover.go",
        "Visitor.go",
        "VisitorConcurrency.go",
        "VisitorPredicate.go",
        "VisitorTraversal.go",
        "XattrObject.go",
        "XattrObjectWriter.go",
    ],
    importpath = "github.com/NVIDIA/vdisc/pkg/storage/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/storage/driver:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
    ],
)
