load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "object.go",
        "zero.go",
    ],
    importpath = "github.com/NVIDIA/vdisc/pkg/storage/zero",
    visibility = ["//visibility:public"],
    deps = ["//pkg/storage:go_default_library"],
)
